{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 204,
  "lineage": "b661279f-f11a-cdb4-1aee-ccb5cbabe9f4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:loadbalancer/app/hansom-alb-test/1e7b197964517b6b",
            "arn_suffix": "app/hansom-alb-test/1e7b197964517b6b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hansom-alb-test-1940120380.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:loadbalancer/app/hansom-alb-test/1e7b197964517b6b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hansom-alb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0525649fa409282d4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b81a9a6ed2fe45a3"
              },
              {
                "subnet_id": "subnet-0c83a7d12a607321a"
              }
            ],
            "subnets": [
              "subnet-0b81a9a6ed2fe45a3",
              "subnet-0c83a7d12a607321a"
            ],
            "tags": {
              "Name": "hansom-alb-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-alb-test",
              "Service": "hansom-test"
            },
            "vpc_id": "vpc-01e06243a61514a20",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.alb.aws_security_group.hansom_alb_sg",
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:listener/app/hansom-alb-test/1e7b197964517b6b/860e346996a41f96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:targetgroup/hansom-tg-test/3d93fa6bc68ee351",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:listener/app/hansom-alb-test/1e7b197964517b6b/860e346996a41f96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:loadbalancer/app/hansom-alb-test/1e7b197964517b6b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.alb.aws_security_group.hansom_alb_sg",
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:targetgroup/hansom-tg-test/3d93fa6bc68ee351",
            "arn_suffix": "targetgroup/hansom-tg-test/3d93fa6bc68ee351",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:targetgroup/hansom-tg-test/3d93fa6bc68ee351",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hansom-tg-test",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hansom-tg-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-tg-test",
              "Service": "hansom-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:targetgroup/hansom-tg-test/3d93fa6bc68ee351-20230827020930111900000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:415279058804:targetgroup/hansom-tg-test/3d93fa6bc68ee351",
            "target_id": "i-0d510ea27e370a58d"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.alb.data.aws_instances.tag",
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hansom_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:security-group/sg-0525649fa409282d4",
            "description": "hansom alb security group production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0525649fa409282d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hansom-alb-sg-test",
            "name_prefix": "",
            "owner_id": "415279058804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hansom-alb-sg-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-alb-sg-test",
              "Service": "hansom-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2ce0bfb34039f29",
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:instance/i-0d510ea27e370a58d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d510ea27e370a58d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04cd1df309842cbf5",
            "private_dns": "ip-10-0-2-100.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0853cd219b2ae8b88",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ec0dc32d27482e3",
            "tags": {
              "Name": "hansom-api-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-api-test",
              "Service": "hansom-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044a52a1f306e7868"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:security-group/sg-044a52a1f306e7868",
            "description": "hansom api sg production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044a52a1f306e7868",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "hansom-api-sg-test",
            "name_prefix": "",
            "owner_id": "415279058804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hansom-api-sg-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-api-sg-test",
              "Service": "hansom-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c848f268321b5bc",
            "association_id": "eipassoc-08defe05625c9827b",
            "domain": "vpc",
            "id": "eipalloc-05c848f268321b5bc",
            "instance": "i-03177d1c1d991788f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d52bb4e909af3dfc",
            "private_dns": "ip-10-0-0-201.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.201",
            "public_dns": "ec2-15-164-52-1.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.52.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hansom-ec2-eip-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-ec2-eip-test",
              "Service": "hansom-test"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2-bastion.aws_instance.ec2",
            "module.ec2-bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2ce0bfb34039f29",
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:instance/i-03177d1c1d991788f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03177d1c1d991788f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d52bb4e909af3dfc",
            "private_dns": "ip-10-0-0-201.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.201",
            "public_dns": "ec2-15-164-52-1.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.52.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd7aafd52b32d290",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b81a9a6ed2fe45a3",
            "tags": {
              "Name": "hansom-bastion-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-bastion-test",
              "Service": "hansom-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f624fb75f612198c"
            ]
          },
          "dependencies": [
            "module.ec2-bastion.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:security-group/sg-0f624fb75f612198c",
            "description": "hansom bastion security group production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f624fb75f612198c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hansom-bastion-sg-test",
            "name_prefix": "",
            "owner_id": "415279058804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hansom-bastion-sg-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-bastion-sg-test",
              "Service": "hansom-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:security-group/sg-0ad3d062b4efe53d9",
            "description": "hansom db security group production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad3d062b4efe53d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hansom-db-sg-test",
            "name_prefix": "",
            "owner_id": "415279058804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hansom-db-sg-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-db-sg-test",
              "Service": "hansom-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0982152bf1f217449",
            "association_id": "eipassoc-0241b3dc01068fc27",
            "domain": "vpc",
            "id": "eipalloc-0982152bf1f217449",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-00083368ef8bed12c",
            "private_dns": "ip-10-0-0-202.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.202",
            "public_dns": "ec2-3-36-200-244.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.200.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hansom-natgw-eip-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-natgw-eip-test",
              "Service": "hansom-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:internet-gateway/igw-06e1bbe23dcd3a071",
            "id": "igw-06e1bbe23dcd3a071",
            "owner_id": "415279058804",
            "tags": {
              "Name": "hansom-igw-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-igw-test",
              "Service": "hansom-test"
            },
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0982152bf1f217449",
            "association_id": "eipassoc-0241b3dc01068fc27",
            "connectivity_type": "public",
            "id": "nat-096392344992cd004",
            "network_interface_id": "eni-00083368ef8bed12c",
            "private_ip": "10.0.0.202",
            "public_ip": "3.36.200.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b81a9a6ed2fe45a3",
            "tags": {
              "Name": "hansom-natgw-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-natgw-test",
              "Service": "hansom-test"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:route-table/rtb-09cf8d6e2dbdf6c8e",
            "id": "rtb-09cf8d6e2dbdf6c8e",
            "owner_id": "415279058804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-096392344992cd004",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hansom-private-rt-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-private-rt-test",
              "Service": "hansom-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:route-table/rtb-0e1365adad1ff92d0",
            "id": "rtb-0e1365adad1ff92d0",
            "owner_id": "415279058804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e1bbe23dcd3a071",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hansom-public-rt-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-public-rt-test",
              "Service": "hansom-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08516cb5783dcfc71",
            "route_table_id": "rtb-09cf8d6e2dbdf6c8e",
            "subnet_id": "subnet-04ec0dc32d27482e3"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045fa64a724a302e6",
            "route_table_id": "rtb-09cf8d6e2dbdf6c8e",
            "subnet_id": "subnet-09198d9ce2a696838"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a2b2e77ef0f7c58",
            "route_table_id": "rtb-0e1365adad1ff92d0",
            "subnet_id": "subnet-0b81a9a6ed2fe45a3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007803469a2184597",
            "route_table_id": "rtb-0e1365adad1ff92d0",
            "subnet_id": "subnet-0c83a7d12a607321a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:subnet/subnet-04ec0dc32d27482e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec0dc32d27482e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415279058804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hansom-private-subnet-1-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-private-subnet-1-test",
              "Service": "hansom-test"
            },
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:subnet/subnet-09198d9ce2a696838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09198d9ce2a696838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415279058804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hansom-private-subnet-2-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-private-subnet-2-test",
              "Service": "hansom-test"
            },
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:subnet/subnet-0b81a9a6ed2fe45a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b81a9a6ed2fe45a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415279058804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hansom-public-subnet-1-test",
              "Service": "hansom-{var.servic_type}"
            },
            "tags_all": {
              "Name": "hansom-public-subnet-1-test",
              "Service": "hansom-{var.servic_type}"
            },
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:subnet/subnet-0c83a7d12a607321a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c83a7d12a607321a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415279058804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hansom-public-subnet-2-test",
              "Service": "hansom-test"
            },
            "tags_all": {
              "Name": "hansom-public-subnet-2-test",
              "Service": "hansom-test"
            },
            "vpc_id": "vpc-01e06243a61514a20"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:415279058804:vpc/vpc-01e06243a61514a20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ee084ab8702ba2b",
            "default_route_table_id": "rtb-0e8e0ba675387628e",
            "default_security_group_id": "sg-08c929fdfac09cea8",
            "dhcp_options_id": "dopt-036c6939253b88d5b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e06243a61514a20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8e0ba675387628e",
            "owner_id": "415279058804",
            "tags": {
              "Name": "hansom-vpc-test",
              "Service": "hansom-{var.service_type}"
            },
            "tags_all": {
              "Name": "hansom-vpc-test",
              "Service": "hansom-{var.service_type}"
            }
          }
        }
      ]
    }
  ]
}